--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ output/
 
 
 # Go specific files
-# - Test binary, built with `go test -c`
+# - Test binary, built with `go test.go -c`
 *.test
 # - Output of the go coverage tool, specifically when used with LiteIDE
 *.out
